--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
 		"analytics",
 		"google"
 	],
-	"license" : "GPLv3",
+	"license": "GPL-3.0-or-later",
 	"support" : {
 		"source" : "http://www.cmsgears.org/downloads/plugins/google-adsense",
 		"forum" : "http://forum.cmsgears.org/",
@@ -24,7 +24,7 @@
 		}
 	},
 	"require" : {
-		"php" : ">=5.4.0",
+		"php" : ">=7.0.0",
 		"cmsgears/module-core" : "*"
 	}
 }
