--- a/composer.json
+++ b/composer.json
@@ -3,20 +3,15 @@
 	"description" : "Google AdSense plugin for CMSGears provide options to configure google adsense.",
 	"homepage" : "http://www.cmsgears.org",
 	"type" : "package",
-	"keywords" : [
-		"yii2",
-		"cmsgears",
-		"plugin",
-		"analytics",
-		"google"
+	"keywords" : [ "yii2", "cmsgears", "plugin", "google", "adsense"
 	],
 	"license": "GPL-3.0-or-later",
 	"support" : {
 		"source" : "http://www.cmsgears.org/downloads/plugins/google-adsense",
-		"forum" : "http://forum.cmsgears.org/",
-		"resources" : "http://resources.cmsgears.org/",
-		"issues" : "https://www.amazingdesk.com/cmsgears/issues/",
-		"blog" : "http://cmsgears.tutorials24x7.com/"
+		"forum" : "http://forum.cmsgears.org",
+		"resources" : "http://resources.cmsgears.org",
+		"issues" : "https://www.amazingdesk.com/cmsgears/issues",
+		"blog" : "http://cmsgears.tutorials24x7.com"
 	},
 	"autoload" : {
 		"psr-4" : {
@@ -24,7 +19,6 @@
 		}
 	},
 	"require" : {
-		"php" : ">=7.0.0",
 		"cmsgears/module-core" : "*"
 	}
 }
